--- a/theme/default/styles.css
+++ b/theme/default/styles.css
@@ -614,8 +614,12 @@ code{
 
 @media (prefers-color-scheme: dark)
 {
-    body, #footer a{
+    body, #footer a, #header a{
         color: #e9e9e9;
+    }
+    
+    #navigation li ul {
+        background: #555;
     }
 
     #mobile_menu{
